Feat: 레포지토리 학생 수업 추가